--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* index */
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -41,4 +43,29 @@ table, th, td {
 th, td {
   padding: 10px;
   text-align: left;
+}
+
+/* artists */
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+}
+
+.artist-card {
+  width: 150px;
+  padding: 10px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.artist-card img {
+  width: 100%;
+  border-radius: 50%;
+  height: 120px;
+  object-fit: cover;
 }
